--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,12 @@ artifacts:
   files:
     - dist/**/*
 
+post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo Delete all resources in this bucket
+      - aws s3 rm s3://${S3_BUCKET} --recursive
+
 cache:
   paths:
     - node_modules/
